--- a/index.xhtml
+++ b/index.xhtml
@@ -1,11 +1,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <title>Pamela</title>
-   <script src="jquery-1.3.2.js" type="text/javascript" />
-   <script src="processing.js" type="text/javascript" />
-   <script src="pamela.js" type="text/javascript" />
+   <script src="js/jquery-1.3.2.js" type="text/javascript" />
+   <script src="js/pamela-buttons.js" type="text/javascript" />
+   <script src="js/pamela-nodes.js" type="text/javascript" />
+   <script src="js/pamela-matrices.js" type="text/javascript" />
+   <script src="js/pamela.js" type="text/javascript" />
+   <style type="text/css">* {margin:0; padding:0}</style>
  </head>
- <body style="text-align: center;">
-  <canvas id="pamela" width="1000px" height="400px"></canvas>
+ <body style="background-color: #333;">
+ 	 <canvas id="pamela"></canvas>
  </body>
 </html>
