--- a/index.xhtml
+++ b/index.xhtml
@@ -6,9 +6,9 @@
    <script src="js/pamela-nodes.js" type="text/javascript" />
    <script src="js/pamela-matrices.js" type="text/javascript" />
    <script src="js/pamela.js" type="text/javascript" />
-   <style type="text/css">* {margin:0; padding:0}</style>
+   <style type="text/css">* {margin:0; padding:0} body { background-color: #333; }</style>
  </head>
- <body style="background-color: #333;">
+ <body>
  	 <canvas id="pamela"></canvas>
  </body>
 </html>
