--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <title>Pamela</title>
-   <script src="js/jquery-1.3.2.js" type="text/javascript" />
-   <script src="js/pamela-buttons.js" type="text/javascript" />
-   <script src="js/pamela-nodes.js" type="text/javascript" />
-   <script src="js/pamela-matrices.js" type="text/javascript" />
-   <script src="js/pamela.js" type="text/javascript" />
+   <script src="js/jquery-1.3.2.js" type="text/javascript"></script>
+   <script src="js/pamela-buttons.js" type="text/javascript"></script>
+   <script src="js/pamela-nodes.js" type="text/javascript"></script>
+   <script src="js/pamela-matrices.js" type="text/javascript"></script>
+   <script src="js/pamela.js" type="text/javascript"></script>
    <style type="text/css">* {margin:0; padding:0} body { background-color: #fff; }</style>
  </head>
  <body>
